[package]
edition = "2021"
name = "mutiny"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
adw = {package = "libadwaita", rev = "e9ca4b59f2d3774c3ecfbb87828f9c6325fd59f9", git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs.git"}
gettext-rs = {version = "0.7", features = ["gettext-system"]}
gtk = {package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs.git"}
log = "0.4"
once_cell = "1.9"
pretty_env_logger = "0.4"
