[package]
edition = "2021"
name = "mutiny"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
adw = {version = "0.1.1", package = "libadwaita"}
gettext-rs = {version = "0.7", features = ["gettext-system"]}
gtk = {version = "0.4.7", package = "gtk4"}
log = "0.4"
once_cell = "1.9"
pretty_env_logger = "0.4"
